Stage 2 Vista principal
faltan los form de policy solution y objetives

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -40,6 +40,37 @@ h2, .h2 {
   padding: 10px;
   margin-bottom: 20px;
 }
+.bg_grey table {
+  background-color: #ffffff;
+  margin-top: 40px;
+}
+.bg_grey table a {
+  color: #e2534b;
+}
+.bg_grey table th {
+  font-weight: 600;
+}
+.bg_grey .btn-warning {
+  margin-left: 10px;
+}
+.bg_grey .label {
+  display: inline-block;
+}
+.bg_grey .label-info {
+  background-color: #F58982;
+}
+.bg_grey .label-info.active {
+  background-color: #ff4f4a;
+}
+.alert-info {
+  background-color: #62b9b0;
+  border-color: #62b9b0;
+  color: #fff;
+  margin: 30px 0;
+}
+.alert-info a {
+  color: #fff;
+}
 .bold {
   font-weight: 700;
 }
