Added relation between Project and Objective models and routes

--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@objective) do |f| %>
+<%= simple_form_for([@project, @objective]) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
