--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -14,9 +14,9 @@
       <tr>
         <td><%= objective.title %></td>
         <td><%= objective.description %></td>
-        <td><%= link_to 'Show', objective %></td>
-        <td><%= link_to 'Edit', edit_objective_path(objective) %></td>
-        <td><%= link_to 'Destroy', objective, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', [@project, objective] %></td>
+        <td><%= link_to 'Edit', edit_project_objective_path(@project, objective) %></td>
+        <td><%= link_to 'Destroy', [@project, objective], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Objective', new_objective_path %>
+<%= link_to 'New Objective', new_project_objective_path(@project) %>
