--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -92,50 +92,52 @@
 
 <h4 class="title_goals">Stage 3: Set Goals</h4>
 
-<div class="row">
-  <div class="col-md-12">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <table class="table_goals">
-        <tr title="Stage Uninitiated or Incomplete">
-          <td class="td-w-3p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
-          <td><a data-toggle="collapse" href="#goal0" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, the Government revises the National HIV Strategy and includes women at risk among targeted and PMTCT among critical strategies</a></td>
-        </tr>
-        </table> 
-      </div>      
-      <div class="collapse steps in" id="goal0">
-        <table class="table table-bordered">
-            <tbody>
-              <tr title="Uninitiated Step">
-                <td class="text-center td-w-10p"><i class="fa fa-unlock-alt"></i></td>
-                <td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
-              </tr>
-              <tr title="You must complete the previous step">
-                <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
-                <td>List actors and power map</td>
-              </tr>
-              <tr title="You must complete the previous step">
-                <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
-                <td>Identify enabling factors and barriers</td>
-              </tr>
-              <tr title="You must complete the previous step">
-                <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
-                <td>Define the interim outcomes and activities</td>
-              </tr>
-              <tr title="You must complete the previous step">
-                <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
-                <td>Define theory of change</td>
-              </tr>
-              <tr title="You must complete the previous step">
-                <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
-                <td>Develop menssages</td>
-              </tr>
-            </tbody>
-      </table>
+<% @objectives.each do |objective| %>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <table class="table_goals">
+          <tr title="Stage Uninitiated or Incomplete">
+            <td class="td-w-3p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+            <td><a data-toggle="collapse" href="#goal1" aria-expanded="false" aria-controls="collapseExample"><%= objective.title %></a></td>
+          </tr>
+          </table> 
+        </div>      
+        <div class="collapse steps in" id="goal1">
+          <table class="table table-bordered">
+              <tbody>
+                <tr title="Uninitiated Step">
+                  <td class="text-center td-w-10p"><i class="fa fa-unlock-alt"></i></td>
+                  <td><%= link_to "Understand the institutional and decision-making cycles/Policy process", stage3_project_objective_path(@project, objective) %></td>
+                </tr>
+                <tr title="You must complete the previous step">
+                  <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
+                  <td>List actors and power map</td>
+                </tr>
+                <tr title="You must complete the previous step">
+                  <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
+                  <td>Identify enabling factors and barriers</td>
+                </tr>
+                <tr title="You must complete the previous step">
+                  <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
+                  <td>Define the interim outcomes and activities</td>
+                </tr>
+                <tr title="You must complete the previous step">
+                  <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
+                  <td>Define theory of change</td>
+                </tr>
+                <tr title="You must complete the previous step">
+                  <td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
+                  <td>Develop menssages</td>
+                </tr>
+              </tbody>
+        </table>
+        </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
 <div class="row">
   <div class="col-md-12">
     <div class="panel panel-default">
