Added link to sandbox creation for stage 3

--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -25,7 +25,7 @@
               <div class="bg_grey">
                 <h4>Understand the institutional and decision-making cycles</h4>
                 <p>Policy decisions are often made according to a cycle or schedule. To maximise your influence you need to have a sound understanding of the policy processes. First, because the analysis of the decision-making process helps to identify opportunities and entry points to begin influencing on a given issue. Second, because last-minute interventions rarely work, and the earlier in the decision-making cycle the idea is accepted, the more effective the end result is likely to be</p>
-                <button type="button" class="btn btn-warning"><i class="fa fa-pencil"></i> Draw in Sandbox</button>
+                <a href="/sandboxes/new" target="_self" class="btn btn-warning"><i class="fa fa-pencil"></i> Draw in Sandbox</a>
               </div>
               <div class="bg_grey">
                 <h4>Map the actors and analyse their influence and support</h4>
