--- a/app/views/sandboxes/_form.html.erb
+++ b/app/views/sandboxes/_form.html.erb
@@ -18,6 +18,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, class: "btn-success" %> <%= link_to 'Cancel', resources_path %>
+    <%= f.button :submit, class: "btn-success" %> <%# link_to 'Cancel', project_resources_path() %>
   </div>
 <% end %>
