--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -97,7 +97,7 @@
                           <td>{{ solution.title }}</td>
                           <td>
                             <i class="fa fa-pencil-square-o" ng-click="add_edit_solution(policy.id, solution.id)"></i>
-                            <i class="fa fa-trash" ng-click=""></i>
+                            <i class="fa fa-trash" ng-click="delete_solution(problem.id, policy.id, solution)"></i>
                           </td>
                         </tr>
                       </tbody>
