add filter for display lock-unlock icon

--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -27,7 +27,7 @@
                 <p>Policy decisions are often made according to a cycle or schedule. To maximise your influence you need to have a sound understanding of the policy processes. First, because the analysis of the decision-making process helps to identify opportunities and entry points to begin influencing on a given issue. Second, because last-minute interventions rarely work, and the earlier in the decision-making cycle the idea is accepted, the more effective the end result is likely to be</p>
                 <a href="/sandboxes/new" target="_self" class="btn btn-warning"><i class="fa fa-pencil"></i> Draw in Sandbox</div></a>
               <div class="bg_grey">
-                <h4>Map the actors and analyse their influence and support</h4>
+                <h4 id="actors">Map the actors and analyse their influence and support</h4>
                 <p>Effective advocacy requires having a good understanding of all relevant actors: those with power to make change happen (decision-makers); those with influence over the decision-makers (influencers); and those in the community who would be supportive or opposing forces.</p>
                 <button type="button" class="btn btn-warning" ng-click="add_edit_actor()">Add Actor</button>
               </div>
@@ -56,7 +56,7 @@
                   </table>
                 </div>
               </div>
-              <div class="bg_grey">
+              <div class="bg_grey" id="factors-barriers">
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_enabling_factor()">Add Enabling Factor</button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_barrier()">Add Barrier</button>
                 <h4>Identify additional enabling factors and barriers <i class="fa fa-info-circle" title="Thanks to the prioritizing table, the decision-making cycle analysis and the actor mapping you will have already identified a number of enabling factors and barriers to achieve your chosen objective. However, you may need to go deeper into the analysis of the context surrounding the specific policy change that you want to pursue. You should think devote time to think about additional relevant enabling factors and barriers of different nature: financial, social, technological, factual, political, religious, cultural, geographical, organizational, etc."></i></h4>
