--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -148,7 +148,7 @@
 <hr>
 
 <h4 class="title_goals">Stage 3: Set Goals</h4>
-
+<%= @objectives.size %>
 <% @objectives.each do |objective| %>
   <div class="row">
     <div class="col-md-12">
@@ -171,7 +171,7 @@
                 <tr title="You must complete the previous step">
                   <td class="text-center td-w-10p">
                     <% if @a_size %>
-                    <i class="fa fa-unlock"></i>
+                    <i class="fa fa-check"></i>
                     <% else %>
                     <i class="fa fa-lock"></i>
                     <% end %>
@@ -183,7 +183,7 @@
                 <tr title="You must complete the previous step">
                   <td class="text-center td-w-10p">
                     <% if @barriers_size || @factors_size %>
-                    <i class="fa fa-unlock"></i>
+                    <i class="fa fa-check"></i>
                     <% else %>
                     <i class="fa fa-lock"></i>
                     <% end %>
@@ -195,7 +195,7 @@
                 <tr title="You must complete the previous step">
                   <td class="text-center td-w-10p">
                     <% if @outcomes_size %>
-                    <i class="fa fa-unlock"></i>
+                    <i class="fa fa-check"></i>
                     <% else %>
                     <i class="fa fa-lock"></i>
                     <% end %>
