fix #306 display of projects
* separate template for public and private projects
* add styles to the footer of projects list

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -4,3 +4,21 @@
 .actions a {
 	margin-left: 10px;
 }
+
+#private_projects_filter {
+	input {
+		margin-left: 15px;
+	}
+}
+
+.footer-project-table {
+	text-align: center;
+	.paging_simple_numbers {
+		a {
+			padding: 0px 5px;
+		}
+		span {
+			font-weight: bold;
+		}
+	}
+}
