--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,11 @@
 <h3>Projects</h3>
 
-<div class="addNew">
-  <%= link_to new_project_path, class: 'btn btn-default' do %>
+<div class="row">
+  <div class="addNew col-md-12 text-right">
+    <%= link_to new_project_path, class: 'btn btn-default' do %>
       <i class="fa fa-plus-square-o"></i> New Project
-  <% end %>
+    <% end %>
+  </div>
 </div>
 
 <div role="tabpanel">
@@ -18,88 +20,12 @@
 
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="private">
-      <table id="private_projects" class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th>id</th>
-            <th>Name</th>
-            <th>Description</th>
-            
-            <th class="no-sort text-center">Public</th>
-            <th>Last update</th>
-            <th class="text-right no-sort">Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-            <% @projects.each do | p | %>
-            <tr>
-                <td><%= p.id %></td>
-                <td><%= link_to p.title, p %></td>
-                <td><%= p.description %></td>
-                <td class="text-center">
-                    <i class="fa fa-globe" title="Public"></i>
-                </td>
-                <td><%= p.updated_at %></td>
-                <td class="text-right actions">
-                  <%= link_to edit_project_path(p) do %>
-                      <i class="fa fa-edit" title="Edit"></i>
-                  <% end %>
-                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
-                    <%= link_to p, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                      <i class="fa fa-trash" title="Delete"></i>
-                    <% end %>
-                </td>
-            </tr>
-            <% end %>
-        </tbody>
-      </table>
+      <%= render "private" %>
     </div>
 
     <div role="tabpanel" class="tab-pane" id="public">
-      <table id="public_projects" class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th>id</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Last update</th>
-          </tr>
-        </thead>
-        <tbody>
-              <tr>
-                <td>1</td>
-                <td><a href="#">Project 1</a></td>
-                <td>Prety Project</td>
-                <td>2015-03-05 13:02:30 UTC</td>
-              </tr>
-        </tbody>
-      </table>
+      <%= render "public" %>
     </div>
   </div>
 </div>
-<script type="text/javascript">
-$(document).ready(function(){
-    $('#private_projects').dataTable( {
-    "dom": '<"toolbar">frtip',
-    "pagingType": "simple_numbers",
-    "order": [],
-    "columnDefs": [ {
-      "targets"  : 'no-sort',
-      "orderable": false,
-    }]
-    } );
-    $('#public_projects').DataTable({
-        "dom": '<"toolbar">frtip',
-    "pagingType": "simple_numbers",
-    "order": [],
-    "columnDefs": [ {
-      "targets"  : 'no-sort',
-      "orderable": false,
-    }]
-    } );
-});
 
-
-</script>
