--- a/app/views/projects/_public.html.erb
+++ b/app/views/projects/_public.html.erb
@@ -7,13 +7,15 @@
 		</tr>
 	</thead>
 	<tbody>
+		<% @public_projects.each do | p | %>
 		<tr>
-			<td><a href="#">Project 1</a></td>
-			<td>Prety Project</td>
+			<td><%= link_to p.title, p %></td>
+			<td><%= truncate p.description, length: 140 %></td>
 			<td>
 				<a href="#"><i class="fa fa-eye"></i></a>
 			</td>
 		</tr>
+		<% end %>
 	</tbody>
 </table>
 
