add tab for "Workshop Tips"

--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -93,6 +93,7 @@
 					<div role="tabpanel" class="tab-pane" id="explication">
 						<%= render 'explanation' %>
 					</div>
+                    <div role="tabpanel" class="tab-pane" id="explication">workshop tips</div>
 				</div>
 			</div>
 		</div>
