--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -1,4 +1,5 @@
 <div class="container main">
+	
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
 			<h3>Which steps will lead you to the achievement of your advocacy objectives?</h3>
@@ -60,7 +61,7 @@
 						<%= render "outcome_modal" %>
 					</div>
 					<div role="tabpanel" class="tab-pane" id="explication">
-						<%= render "explanation" %>
+						<%= render "explanation_stage4" %>
 					</div>
 				</div>
 			</div>
