add categorie to outcomes
* run migrations
* small fixes

--- a/app/views/objectives/_outcome_modal.html.erb
+++ b/app/views/objectives/_outcome_modal.html.erb
@@ -14,7 +14,7 @@
 			</div>
 			<div class="form-group">
 				<label for="category">Category</label>
-				<select name="category" ng-model="current_outcome.category">
+				<select name="category" ng-model="current_outcome.categorie">
 					<option ng-repeat="ca in outcomes_categories">{{ ca }}</option>
 				</select>
 			</div>
