--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -33,7 +33,7 @@
 								<tbody>
 									<tr ng-repeat="outcome in outcomes">
 										<td>{{outcome.title}}</td>
-										<td>{{outcome.category}}</td>
+										<td>{{outcome.categorie}}</td>
 										<td class="text-center"><a href="#" title="Edit" ng-click="add_edit_outcome(outcome)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_outcome(outcome)"><i class="fa fa-trash"></i></a></td>
 									</tr>
 								</tbody>
