disabled button when no title present
* add height to the modals textarea

--- a/app/views/objectives/_outcome_modal.html.erb
+++ b/app/views/objectives/_outcome_modal.html.erb
@@ -10,7 +10,7 @@
 			</div>
 			<div class="form-group">
 				<label for="description">Description</label>
-				<textarea name="description" class="form-control" ng-model="current_outcome.description" placeholder="Add any important outcome info"></textarea>
+				<textarea name="description" class="form-control textarea-400" ng-model="current_outcome.description" placeholder="Add any important outcome info"></textarea>
 			</div>
 			<div class="form-group">
 				<label for="category">Category</label>
