--- a/app/views/projects/_policy_modal.html.erb
+++ b/app/views/projects/_policy_modal.html.erb
@@ -10,7 +10,7 @@
 			</div>
 			<div class="form-group">
 				<label for="description">Description</label>
-				<textarea name="description" class="form-control" ng-model="current_policy.description" placeholder="Enter a description for a problem"></textarea>
+				<textarea name="description" class="form-control textarea-400" ng-model="current_policy.description" placeholder="Enter a description for a problem"></textarea>
 			</div>
 		</form>
 	</div>
