--- a/app/views/projects/_real_problem_modal.html.erb
+++ b/app/views/projects/_real_problem_modal.html.erb
@@ -10,7 +10,7 @@
 			</div>
 			<div class="form-group">
 				<label for="description">Description</label>
-				<textarea name="description" class="form-control" ng-model="problem.description" placeholder="Enter a description for a problem"></textarea>
+				<textarea name="description" class="form-control textarea-400" ng-model="problem.description" placeholder="Enter a description for a problem" style="height: 400px"></textarea>
 			</div>
 			<div class="form-group">
 				<label for="focus_area">Focus Area</label>
@@ -21,7 +21,7 @@
 		</form>
 	</div>
 	<div class="modal-footer">
-		<button class="btn btn-primary" ng-click="save($event)">Save</button>
+		<button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: problem.title == '' }">Save</button>
 		<button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
 	</div>
 </script>
